// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the TextInput component should match the snapshot for the fail input 1`] = `
[
  <input
    className="form-control is-invalid"
    data-testid="input-element"
    disabled={false}
    id="test3"
    readOnly={false}
    type="text"
    value=""
  />,
  <div
    className="invalid-feedback"
    data-testid="feedback-element"
  >
    invalid field
  </div>,
]
`;

exports[`the TextInput component should match the snapshot for the neutral input 1`] = `
[
  <input
    className="form-control "
    data-testid="input-element"
    disabled={false}
    id="test1"
    readOnly={false}
    type="text"
    value=""
  />,
  <div
    className="invalid-feedback"
    data-testid="feedback-element"
  />,
]
`;

exports[`the TextInput component should match the snapshot for the success input 1`] = `
[
  <input
    className="form-control is-valid"
    data-testid="input-element"
    disabled={false}
    id="test2"
    readOnly={false}
    type="text"
    value=""
  />,
  <div
    className="valid-feedback"
    data-testid="feedback-element"
  >
    valid field
  </div>,
]
`;
